--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="A app to learn Fetch API using TV Maze API." />
+  <meta name="description" content="An app to learn Fetch API using TV Maze API." />
   <title>TV shows search</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
